--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								<a href="#zookeeper" class="image featured"><img src="images/zookeeper_img.png" alt="" /></a>
 								<h3><a href="#zookeeper">Zookeeper</a></h3>
 								<p><a href="http://www.cour2web.com" style="text-decoration: none;">Visite the Site</a> &nbsp;
-								<a href="#" style="text-decoration: none;">View Code on Github</a></p>
+								<a href="https://github.com/Bourama98/Zookeeper" style="text-decoration: none;">View Code on Github</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -143,7 +143,7 @@
 		
 		
 		<div class="w3-bar w3-light-grey w3-card-4">
-			<a href="https://github.com/Bourama98/project1" class="w3-bar-item w3-button">View code </a>
+			<a href="https://github.com/Bourama98/Zookeeper" class="w3-bar-item w3-button">View code </a>
 			<a href="http://www.cour2web.com" target="_blank" class="w3-bar-item w3-button">Visite the project site</a>			
 		    <a href="#enhanceThree" class="w3-bar-item w3-button" onclick="openEnhancement('enhanceThree')">Enhancements </a>
 		</div>
