--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		
 		
 		<div class="w3-bar w3-light-grey w3-card-4">
-			<a href="https://github.com/Bourama98/Zookeeper" class="w3-bar-item w3-button">View code </a>
+			<a href="https://github.com/Bourama98/Zookeeper" target="_blank class="w3-bar-item w3-button">View code </a>
 			<a href="http://www.cour2web.com" target="_blank" class="w3-bar-item w3-button">Visite the project site</a>			
 		    <a href="#enhanceThree" class="w3-bar-item w3-button" onclick="openEnhancement('enhanceThree')">Enhancements </a>
 		</div>
