--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
  <article id="codeReviewLCS2" class="wrapper style2">
 	<h2><strong>LCS2 Code Review</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
-		<video id="_codeReviewLCS2" width="950" height="450" controls>
+		<video id="_codeReviewLCS2" style="width: 80%; height: 70%" controls>
 			<source src="http://www.cour2web.com/video/code_review.mp4" type="video/mp4">
 		</video> 
 		
@@ -137,7 +137,7 @@
 <article id="zookeeper" class="wrapper style2">
 	<h2><strong>Zookeeper in Action</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
-		<video id="_zookeeper" width="950" height="450" controls>
+		<video id="_zookeeper" style="width: 80%; height: 70%" controls>
 			<source src="http://www.cour2web.com/video/zookeeper_recording.mp4" type="video/mp4">
 		</video> 
 		
@@ -156,7 +156,7 @@
 <article id="lc2_action" class="wrapper style2">
 	<h2><strong>LCS2 in Action</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
-		<video id="_lc2_action" width="950" height="450" controls>
+		<video id="_lc2_action"style="width: 80%; height: 450px" controls>
 			<source src="http://www.cour2web.com/video/Screen_Recording_LCS2.mp4" type="video/mp4">
 		</video> 
 		
