--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 			<p>I chose to move the credentials to a MySQL database that is more secure and provides more flexibility than a text file. I also decided to move the program from the command line interface to a web interface that is user-friendly and easily accessible across multiple platforms.</p>
 			<p>I selected this artifact and the enhancement because it shows my ability to work web development projects using java server faces, Html, and CSS. I did meet the course objectives I planned to comply with this enhancement, which was implementing a database in a server-side project.</p>
 			<p>I learned that keeping up to date with all the new versions of API and technology is a must for software engineers. Also, I learned that authentication for the mobile app is a lot simpler compare to web applications.</p>
-			<p>This artifact can be view at <a href="http//www.cour2web.com">www.cour2web.com</a></p>
+			<p>This artifact can be view at <a href="http://www.cour2web.com">www.cour2web.com</a></p>
 			<p></p>
 		  </div>
 		  <!-- End Enhancement Three -->
