--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<li><a href="#top">Top</a></li>
 					<li><a href="#work">Work</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#enhancements">Enhancements</a></li>
+					<li><a href="#enhancements">Narratives</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
