--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span> <image src="images/forklift.png"/></span>
-								<h3>ForkList Operator</h3>
+								<h3>ForkLift Operator</h3>
 								<p>I am currently working at National Frozen Food as a forklift operator.</p>
 							</section>
 						</div>
