--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a class="fas fa-at" href="mailto:mangara98@hotmail.com"></a></li>
+							        <li><a href="https://linkedin.com/in/bourama-mangara-20711519" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/Bourama98" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a class="fas fa-at" href="mailto:mangara98@hotmail.com" ></a></li>
 							</ul>
 							<hr />
 						</div>
