--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 			<h4><strong>Enhancement Two: Algorithms and Data Structure</strong></h4>
 			<p>As mentioned in the TutorialPoing, Data Structures are the programmatic way of storing data so that data can be used efficiently (Data Structure and Algorithms Tutorial). In this assignment, I decided to enhance another part of the Android mobile app, LCS2(Local Coffee Shop), a simple eCommerce app that displays some random items when it starts and gives users the option to search for products, add to cart and place an order. I used the firebase Real-time database to facilitate the implementation of product search, storing, and retrieving order history data. The firebase API method helps with the application of the search algorithm that I used to display products, based on user-entered character(s). According to the Tutorial point site, Algorithm is a step-by-step method, which determines a set of directions to be performed in a specific order to get the desired output (Data Structure and Algorithms Tutorial). I redesign the Order class to include the list of items in the Order, orderDate, total, and ID used in the OrderHistoryAdapter class to display a list of orders.</p>
             <p>I structure the order collection based on user ID and date keys. This method, to my knowledge, is better and more straightforward compare to using SQL, where data distributed between multiple tables.</p>
-			 <image src="images/order_structure.png"/>
+			 <image src="images/order_structure.png" style="width: 100%;" />
 			   </p>
 			   <p>The lesson I learned is that exploring a tool before implementing it is a must.
 				  I assumed firebase would have a similar querying syntax as in MongoDB, which was not correct.
