--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 			
 			<p><h4>Work Cited</h4></p>
 			<p>Data Structure and Algorithms Tutorial. (n.d.).
-			  Retrieved August 01, 2020, from https://www.tutorialspoint.com/data_structures_algorithms/index.htm</p>
+				Retrieved August 01, 2020, from https://www.tutorialspoint.com/<br></br>data_structures_algorithms/index.htm</p>
 		  </div>
 		  <!-- End Enhancement Two -->
 		  <!-- Enhancement Three Start -->
