--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 							<header>
 								<h1>Hi. I'm <strong>Bourama Mangara</strong>.</h1>
 							</header>
-							<p>I am a passionate individual with a newly received
-							   BS in Software Engineering from Southern New Hampshire University (SNHU). 
+							<p>I am a passionate individual with a
+							   Bachelor of Computer Science in Software Engineering from Southern New Hampshire University (SNHU). 
 							   I am looking for employment that combines my passions for developing 
 							   programs that empower and make positive differences.</p>
 							<a href="#professional-self-assessment" class="button large scrolly">Professional Self-Assessment</a>
