--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 		   From there, I decided to get a Certificate as a Java Server Side Programmer.
 		   I did not work in computer science because I always felt I needed to learn
 		   more, so in 2018, I started a Bachelor of Software Engineering program at SNHU.
-		   While in the program, I learned that understand the concept of programming
+		   While in the program, I learned that understanding the concept of programming
 		   empowers a developer to learn new languages quickly. My understanding of
 		   programming and data structure has improved drastically. In CS-200,
 		   I learned some valuable programming skills using Python, which also applies to 
@@ -259,7 +259,7 @@
 		   In CS-200, I understand what algorithm means in computer science and the
 		   importance of adequately naming variables and functions, as well as comments
 		   within the code that help the developer and his team when testing or debugging.</p>
-		<p>The CS-260, Data Structures, and Algorithms class introduce me to lots of new
+		<p>The CS-260, Data Structures, and Algorithms class introduced me to lots of new
 		   concepts. I first learned about C++, in which I use vectors and structs and
 		   implement linear and binary search. In CS-260, I was introduced to linked lists,
 		   pointers, Stacks, Queues, and various Sorting algorithms and Trees. For example,
@@ -267,7 +267,7 @@
 		   algorithms.</p>
 		<p>Before CSS-360, The Advanced Programming Concepts class, I was aware of NoSQL
 		   but never heard of the MongoDB database or how to develop a RESTful API; this
-		   was an existing class for me because I was made aware of the power and
+		   was an exciting class for me because I was made aware of the power and
 		   scalability of  NoSQL database versus SQL. Also, I learned about Git and
 		   JUnit for version control, team collaboration, and testing. The software
 		   Development Life Cycle course introduces me to Agile, Scrum, and Water
