--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 	<!--Professional Self-Assessment Start -->
 
    <article id="professional-self-assessment" class=" wrapper style1">
-   <div class="w3-container w3-padding-64" style="width: 99%; margin:1%; font-family: 'Times New Roman', Times, serif; align-content: left;">
+   <div  class="col-8 col-7-large col-12-medium">
 	    <h1>Professional Self-Assessment</h1>
 	    <p><h4>Educational Journey and Program Reflection</h4></p>
 		<p>I have been fascinated by technologies since I was little,
