--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Bourama Mangara</strong>.</h1>
+								<h1>Hi. I'm <strong>Bourama</strong>.</h1>
 							</header>
 							<p>I am a passionate individual with a
 							   Bachelor of Computer Science in Software Engineering from Southern New Hampshire University (SNHU). 
