--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			</article>
 
 		<!-- Work -->
+		<!--
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
@@ -77,7 +78,7 @@
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
-			</article>
+			</article> -->
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
