--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="container">
 					<header>
 						<!--<h2>Here’s some stuff I made recently.</h2>-->
-						<h2>Recent Projects</h2>
+						<h2>Recent Projects.</h2>
 					</header>
 					<div class="row">
 						
@@ -119,7 +119,7 @@
 			</article>
  <!--Video Code Review for LCS2-->
  <article id="codeReviewLCS2" class="wrapper style2">
-	<h2><strong>LCS2 Code Review</strong></h2>
+	<h2><strong>LCS2 Code Review.</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
 		<video id="_codeReviewLCS2" style="width: 80%; height: 70%" controls>
 			<source src="http://www.cour2web.com/video/code_review.mp4" type="video/mp4">
@@ -136,7 +136,7 @@
 <!-- End Video COde Review for LCS2 -->
 <!-- Video Showcasing Zookeeper -->
 <article id="zookeeper" class="wrapper style2">
-	<h2><strong>Zookeeper in Action</strong></h2>
+	<h2><strong>Zookeeper in Action.</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
 		<video id="_zookeeper" style="width: 80%; height: 70%" controls>
 			<source src="http://www.cour2web.com/video/zookeeper_recording.mp4" type="video/mp4">
@@ -155,7 +155,7 @@
 <!-- End Video Showcasing Zookeeper -->
 <!-- Video LC2 final test -->
 <article id="lc2_action" class="wrapper style2">
-	<h2><strong>LCS2 in Action</strong></h2>
+	<h2><strong>LCS2 in Action.</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
 		<video id="_lc2_action"style="width: 80%; height: 450px" controls>
 			<source src="http://www.cour2web.com/video/Screen_Recording_LCS2.mp4" type="video/mp4">
