--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
  <article id="codeReviewLCS2" class="wrapper style2">
 	<h2><strong>LCS2 Code Review.</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
-		<video id="_codeReviewLCS2" style="width: 80%; height: 70%">
+		<video id="_codeReviewLCS2" style="width: 80%; height: 70%" controls>
 			<source src="http://www.cour2web.com/video/code_review.mp4" type="video/mp4">
 		</video> 
 		
@@ -138,7 +138,7 @@
 <article id="zookeeper" class="wrapper style2">
 	<h2><strong>Zookeeper in Action.</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
-		<video id="_zookeeper" style="width: 80%; height: 70%">
+		<video id="_zookeeper" style="width: 80%; height: 70%" controls>
 			<source src="http://www.cour2web.com/video/zookeeper_recording.mp4" type="video/mp4">
 		</video> 
 		
@@ -157,7 +157,7 @@
 <article id="lc2_action" class="wrapper style2">
 	<h2><strong>LCS2 in Action.</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
-		<video id="_lc2_action"style="width: 80%; height: 450px">
+		<video id="_lc2_action"style="width: 80%; height: 450px" controls>
 			<source src="http://www.cour2web.com/video/Screen_Recording_LCS2.mp4" type="video/mp4">
 		</video> 
 		
