--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	<h2><strong>LCS2 Code Review.</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
 		<video id="_codeReviewLCS2" style="width: 80%; height: 70%" controls>
-			<source src="https://www.cour2web.com/video/code_review.mp4" type="video/mp4" />
+			<source src="https://cour2web.com/video/code_review.mp4" type="video/mp4" />
 		</video> 
 		
 		
@@ -139,7 +139,7 @@
 	<h2><strong>Zookeeper in Action.</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
 		<video id="_zookeeper" style="width: 80%; height: 70%" controls>
-			<source src="http://www.cour2web.com/video/zookeeper_recording.mp4" type="video/mp4">
+			<source src="https://www.cour2web.com/video/zookeeper_recording.mp4" type="video/mp4">
 		</video> 
 		
 		
