--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 	<h2><strong>LCS2 in Action.</strong></h2>
 	<div class="w3-card-4" style=" width: 70%; margin: auto;">
 		<video id="_lc2_action"style="width: 80%; height: 450px" controls>
-			<source src="http://www.cour2web.com/video/Screen_Recording_LCS2.mp4" type="video/mp4">
+			<source src="https://cour2web.com/video/Screen_Recording_LCS2.mp4" type="video/mp4">
 		</video> 
 		
 		
